<resources>
    <string name="app_name" translatable="false">NeWork</string>
    <string name="welcome_to_nework">Welcome to NeWork</string>
    <string name="social_network_of_professionals">Social network of professionals</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">If you don\'t have an account, <font color="#FF0066FF">sign up</font></string>
    <string name="signing_up_for_nework">Signing Up for NeWork</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="next_step">Next step</string>
    <string name="if_you_have_an_account_sign_in">If you have an account, <font color="#FF0066FF">sign in</font></string>
    <string name="enter_your_personal_details">Enter your personal details</string>
    <string name="name">Name</string>
    <string name="place_of_work">Place of work*</string>
    <string name="you_can_upload_an_avatar_so_people_can_recognize_you">You can upload an avatar so people can recognize you</string>
    <string name="create_account">Create account</string>
    <string name="sign_in_to_nework">Sign In to NeWork</string>
    <string name="login_or_password_are_wrong">Login or password entered incorrectly</string>
    <string name="retry_text">Error! Try again</string>
    <string name="network_problems">There is no internet connection. Please try later</string>
    <string name="unknown_problems">Unknown error! Try again</string>
    <string name="passwords_didnt_match">Those passwords didn’t match. Try again</string>
    <string name="input_fields_empty">Input fields cannot be empty</string>
    <string name="back">Back</string>
    <string name="avatar">Avatar</string>
    <string name="delete_avatar">Delete avatar</string>
    <string name="error_photo">Failed to upload photo! Try again</string>
    <string name="add_photo">Add photo</string>
    <string name="insert_photo">Insert photo</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="add_more">Add more</string>
    <string name="send">Send</string>
    <string name="skip_this_step">Continue</string>
    <string name="enter_your_places_of_work">Enter your places of work</string>
    <string name="delete_place_of_work">Delete place of work</string>
    <string name="position">Position*</string>
    <string name="link">Link</string>
    <string name="link_helper_text">You can add a link as confirmation</string>
    <string name="required_fields_cannot_be_empty">Required fields cannot be empty</string>
    <string name="media">Media</string>
    <string name="event">Event</string>
    <string name="new_message">New message</string>
    <string name="menu">Menu</string>
    <string name="photo_content">Photo content</string>
    <string name="mentioned_users">Mentioned users</string>
    <string name="avatar_mentioned_user">Avatar mentioned user</string>
    <string name="my_avatar">My avatar</string>
    <string name="now">Now</string>
    <string name="time_spending">Time spending:</string>
    <string name="speakers">Speakers</string>
    <string name="participate">Participate</string>
    <string name="add_new_event">Add new event</string>
    <string name="add_new_post">Add new post</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="home">Home</string>
    <string name="my_profile">My profile</string>
    <string name="video">Video</string>
    <string name="audio_label">Audio label</string>
    <string name="play">Play</string>
    <string name="audio_file">Audio file</string>
    <string name="anything_new">Anything new?</string>
    <string name="you_can_paste_a_link">You can paste a link</string>
    <string name="save">Save</string>
    <string name="add_link">Add link</string>
    <string name="add_media_file">Add media file</string>
    <string name="add_mentioned_users">Add mentioned users</string>
    <string name="delete_mention_user">Delete mention user</string>
    <string name="delete_link">Delete link</string>
    <string name="select_a_person_from_the_list">Select a person from the list</string>
    <string name="enter_the_person_s_name">Enter the person\'s name</string>
    <string name="add_this_person">Add this person</string>
    <string name="choose_the_person">Choose the person</string>
    <string name="oops_something_went_wrong">Oops something went wrong, user tag feature is not available yet, please try again later</string>
    <string name="oops">Oops something went wrong, reload app please</string>
    <string name="select_file_type">Select file type</string>
    <string name="photo">Photo</string>
    <string name="audio">Audio</string>
    <string name="choose_audio">Choose audio</string>
    <string name="audio_files_not_found">Audio files not found on your device</string>
    <string name="content_empty">Text message cannot be empty</string>
    <string name="log_out">Log out</string>
    <string name="finished_working">Finished working</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="started_working">Started working*</string>
    <string name="your_places_of_works">Your places of works</string>
    <string name="edit_work_graph">Edit work graph</string>
    <string name="image">Image</string>
    <string name="event_type">Event type:</string>
    <string name="online" translatable="false">Online</string>
    <string name="offline" translatable="false">Offline</string>
    <string name="link_text">Link:</string>
    <string name="number_of_participants">Number of participants:</string>
    <string name="cancel_participation">Cancel participation</string>
    <string name="speakers_new_event">Speakers</string>
    <string name="event_desription">Event description</string>
    <string name="start_of_the_event">Start of the event</string>
    <string name="day">Day</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="selected_date">Selected date</string>
    <string name="selected_time">Selected time</string>
</resources>