<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SignUpFragment">

    <FrameLayout
        android:paddingTop="@dimen/first_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/backButton"
            style="?attr/materialIconButtonStyle"
            android:layout_marginStart="@dimen/first_dp"
            app:icon = "@drawable/ic_baseline_arrow_back_24"
            app:iconTint = "@color/gray"
            app:iconSize = "@dimen/third_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/sixth_dp"
            android:layout_height="@dimen/sixth_dp"
            android:src="@drawable/ic_netelogy"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"/>


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/second_dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_in_to_nework"
            android:textColor="@color/blue"
            android:textSize="@dimen/twenty_four_sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/second_dp"
            android:layout_gravity="center_horizontal"
            app:boxStrokeColor="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login"
                android:layout_width="@dimen/thirty_fifth_dp"
                android:layout_height="@dimen/eight_dp"
                android:hint="@string/login" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/first_dp"
            android:layout_gravity="center_horizontal"
            app:boxStrokeColor="@color/gray"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="@dimen/thirty_fifth_dp"
                android:layout_height="@dimen/eight_dp"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signInButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/second_dp"
            android:text="@string/sign_in"
            android:textSize="@dimen/fourteen_sp"
            app:cornerRadius="@dimen/first_dp" />

        <Button
            android:id="@+id/signUpButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/zero_dp"
            android:text="@string/sign_up"
            android:textColor="@color/gray"
            android:textSize="@dimen/fourteen_sp"
            app:cornerRadius="@dimen/first_dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/sixth_dp"
        android:layout_height="@dimen/sixth_dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:progressTint="@color/green"/>

</LinearLayout>