<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/second_dp"
    android:orientation="vertical"
    app:contentPadding="@dimen/second_dp"
    app:cardBackgroundColor="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialogText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_file_type"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/twenty_sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialogText"
            android:layout_marginTop="@dimen/second_dp">
            <Button
                android:id="@+id/addPhoto"
                style="@style/Widget.Material3.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo"
                android:textColor="@color/gray"
                android:textSize="@dimen/fourteen_sp"
                app:icon="@drawable/outline_photo_24"
                app:iconSize="@dimen/fourth_dp"
                app:iconTint="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogText"/>

            <Button
                android:id="@+id/addVideo"
                style="@style/Widget.Material3.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/first_dp"
                android:text="@string/video"
                android:textColor="@color/gray"
                android:textSize="@dimen/fourteen_sp"
                app:icon="@drawable/outline_video_file_24"
                app:iconSize="@dimen/fourth_dp"
                app:iconTint="@color/gray"
                app:layout_constraintStart_toEndOf="@id/addPhoto"
                app:layout_constraintTop_toTopOf="@id/addPhoto" />

            <Button
                android:id="@+id/addAudio"
                style="@style/Widget.Material3.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/first_dp"
                android:text="@string/audio"
                android:textColor="@color/gray"
                android:textSize="@dimen/fourteen_sp"
                app:icon="@drawable/outline_audio_file_24"
                app:iconSize="@dimen/fourth_dp"
                app:iconTint="@color/gray"
                app:layout_constraintTop_toTopOf="@id/addPhoto"
                app:layout_constraintStart_toEndOf="@id/addVideo"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>